# botwa

nodejs/: .gitignore  package.json
nodejs/src/: index.js  index.ts
rust/: .gitignore  Cargo.toml
rust/data/tmp/: readme.md
rust/src/: main.rs
rust/src/cruds/: bot.rs  img_to_stk.rs  img_to_stk_with_txt.rs  menu.rs  mod.rs  txt_to_stk.rs
rust/src/utils/: img_to_stk.rs  menu.rs  mod.rs  sticker_text.rs
