[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
axum = "0.8.3"
base64 = "0.22.1"
image = "0.25.6"
imageproc = "0.25.0"
infer = "0.19.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
webp = "0.3.0"
